--- a/docs/assets/css/tailwind.css
+++ b/docs/assets/css/tailwind.css
@@ -1294,6 +1294,15 @@ select {
 .w-6 {
   width: 1.5rem;
 }
+.min-w-\[250px\] {
+  min-width: 250px;
+}
+.min-w-\[200px\] {
+  min-width: 200px;
+}
+.min-w-\[320px\] {
+  min-width: 320px;
+}
 .max-w-screen-2xl {
   max-width: 1536px;
 }
@@ -1312,6 +1321,9 @@ select {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-col {
   flex-direction: column;
@@ -1688,16 +1700,12 @@ code {
   background-color: rgb(205 208 215 / var(--tw-bg-opacity));
   padding: 0.25rem;
 }
-pre {
-  max-width: calc(100vw - 3rem);
-}
 .prose :where(code):not(:where([class~="not-prose"] *))::before {
     content: normal;
 }
 .prose :where(code):not(:where([class~="not-prose"] *))::after {
     content: normal;
 }
-.prose th, .prose td { min-width: 200px; }
 .task-list {
   list-style-type: none;
   padding-left: 0px;
